# course-planning-constraint-program

./: .gitignore  ARCHITECTURE.md  CP2.py  README.md  ROADMAP.md  app.py  conftest.py  course_reqs.json  cp2_types.py  fetch_data.py  historical_credits.json  pdf_parse.py  planning.txt  prereq_parsing.py  pyproject.toml  requirement_blocks.py  roadmap.txt  solver.py  test_solver.py
data/: historical_credits.json  offer_rates.json
src/: CP2.py  app.py  conftest.py  cp2_types.py  fetch_data.py  pdf_parse.py  requirement_blocks.py  solver.py
static/: style.css
static/css/: index.css  style.css  style.scss
static/js/: index.js
templates/: index.html  rec.html
