[tool.poetry]
name = "cp2"
version = "0.1.0"
description = "Course Planning Constraint Program (CP^2): a constraint program for generating course schedules that satisfy the student's specifications."
authors = ["Jediah Katz <jediahkatz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
ortools = "9.0.9048"
Pillow = "^8.4.0"
pytesseract = "^0.3.8"
pdf2image = "^1.16.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
